fixed content shifting whe opening popup

--- a/src/styles/calibration.scss
+++ b/src/styles/calibration.scss
@@ -38,7 +38,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    overflow: auto;
+    overflow-y: scroll;
   }
   &__calibration-title {
     margin: 99px auto 53px auto;
